Fix small layout bug for multiline LmFlex in Safari

--- a/src/scss/_sidebar_right.scss
+++ b/src/scss/_sidebar_right.scss
@@ -275,7 +275,7 @@ is itself a row flexbox */
         flex-wrap: wrap;
 
         .Lm {
-            min-width: 8%;
+            flex: 1 1 8%
         }
     }
 }
